--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,11 @@
     "autoload": {
         "psr-4": {
             "HomeNet\\RouterosApi\\": "src"
-        }
+        },
+
+        "files": [
+            "helper/UptimeHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
